welcome.lessons.welcome.instructions.Instructions.scala.error
Program:1: error: not found: value baissebrosse
baissebrosse()
^Program:15: error: not found: value levebrosse
levebrosse()
^